# Indoor-Navigation-Sim

./: .gitignore  README.md
PDR_simulation/: CMakeLists.txt  PDR_알고리즘_개선_보고서.md  README.md  main.cpp  viz.cpp  viz.h
PDR_simulation/data/PDR_Data/: sim_data_260212-164024.txt  sim_data_260213-144821.txt  공학관1층.txt  안암병원_긴보행.txt  안암병원경로3_엄청김.txt  안암병원보행데이터.txt  안암병원보행데이터2.txt
PDR_simulation/data/mapdata/anamhos/: zeromap_12F - origin(703,2169).txt  zeromap_9F - origin(684,2065).txt  zeromap_B4F - origin(692,1520).txt  zeromap_B5F - origin(689,1293).txt  zeromap_B6F - origin(706,2166).txt
PDR_simulation/data/mapdata/enb/: zeromap_1F - origin(252,645).txt  zeromap_2F - origin(287,209).txt  zeromap_3F - origin(260,210).txt  zeromap_4F - origin(264,209).txt  zeromap_5F - origin(264,209).txt  zeromap_6F - origin(287,210).txt  zeromap_7F - origin(288,690).txt  zeromap_8F - origin(221,703).txt  (+1 more)
PDR_simulation/include/: SimDataLogger.h
PDR_simulation/include/Filter/: AdaptiveFilter.h
PDR_simulation/include/Sensor/: CoordinateTransform.h
PDR_simulation/include/StepDetection/: onHand.h
PDR_simulation/include/StepLength/: StepLength.h
PDR_simulation/include_old/: PDRresult.h
PDR_simulation/include_old/Filter/: MovingAverage.h
PDR_simulation/include_old/Sensor/: SensorManager.h
PDR_simulation/include_old/StepDetection/: onHand.h
PDR_simulation/include_old/StepLength/: SLRequire.h  StepLength.h
PDR_simulation/mock/: jni.h
PDR_simulation/mock/android/: log.h
PDR_simulation/output/: result.txt
PDR_simulation/src/: PDRStateManager.cpp  SimDataLogger.cpp
PDR_simulation/src/Filter/: AdaptiveFilter.cpp  MovingAverage.cpp
PDR_simulation/src/StepDetection/: onHand.cpp
PDR_simulation/src/StepLength/: StepLength.cpp
PDR_simulation/src_old/Sensor/: CoordinateTransform.cpp
PDR_simulation/src_old/StepDetection/: onHand.cpp
PDR_simulation/src_old/StepLength/: SLRequire.cpp  StepLength.cpp
PDR_simulation/src_wrapper/: OldAlgorithmWrapper.cpp  OldAlgorithmWrapper.h
zeromap-simulation/: CMakeLists.txt  main.cpp
zeromap-simulation/include/: print.h
zeromap-simulation/map_data/anamhosp/: floorchange_stairs_areas.json  mapmatching_config_1F.json  mapmatching_config_2F.json  mapmatching_config_3F.json  mapmatching_config_4F.json  zeromap_11F - origin(684,2065).txt  zeromap_13F - origin(1067,2169).txt  zeromap_1F - origin(960,700).txt  zeromap_4F - origin(684,1198).txt  zeromap_5F - origin(684,959).txt  zeromap_6F - origin(684,1014).txt  zeromap_8F - origin(684,1014).txt  zeromap_B1F - origin(692,1520).txt  zeromap_B2F - origin(692,1520).txt  zeromap_B3F - origin(689,1520).txt
zeromap-simulation/map_data/enb/: floorchange_elevator_areas.json  floorchange_stairs_areas.json  map_correction_areas.json  mapmatching_config_1F.json  mapmatching_config_2F.json  mapmatching_config_3F.json  mapmatching_config_4F.json  mapmatching_config_5F.json  mapmatching_config_6F.json  mapmatching_config_7F.json  stairs_areas.json  zeromap_1F - origin(252,645).txt  zeromap_2F - origin(287,209).txt  zeromap_3F - origin(260,210).txt  zeromap_4F - origin(264,209).txt  zeromap_5F - origin(264,209).txt  zeromap_6F - origin(287,210).txt  zeromap_7F - origin(288,690).txt
zeromap-simulation/test_dataset/: pdr_log_20260115_181028.txt  pdr_log_20260115_181300.txt  pdr_log_20260115_183716.txt  pdr_log_20260116_094818.txt  pdr_log_20260116_104750.txt  pdr_log_20260120_111540.txt  pdr_log_20260120_154346.txt
(+13 files in other folders)
